@@ -3,8 +3,8 @@
 <xs:annotation>
 	<xs:documentation xml:lang="en">
 		Phoronix Test Suite / OpenBenchmarking.org XML Test Profile Specification
-		Copyright (C) 2008 - 2010, Phoronix Media
-		Copyright (C) 2008 - 2010, Michael Larabel
+		Copyright (C) 2008 - 2013, Phoronix Media
+		Copyright (C) 2008 - 2013, Michael Larabel
 	</xs:documentation>
 </xs:annotation>
 <xs:include schemaLocation="types.xsd" />
@@ -26,6 +26,8 @@
 			<xs:element name="TimesToRun" type="TimesToRun" minOccurs="0" maxOccurs="1" />
 			<xs:element name="IgnoreRuns" type="xs:string" minOccurs="0" maxOccurs="1" />
 			<xs:element name="InstallationAgreement" type="xs:string" minOccurs="0" maxOccurs="1" />
+			<xs:element name="PreInstallMessage" type="xs:string" minOccurs="0" maxOccurs="1" />
+			<xs:element name="PostInstallMessage" type="xs:string" minOccurs="0" maxOccurs="1" />
 		</xs:sequence>
 		</xs:complexType>
 		</xs:element>
